# passwordless_authenticator

./: README.md  main.py  pyproject.toml
app/static/css/: style.css
app/templates/: home.html  index.html  streaming.html
runs/detect/train/: args.yaml
runs/detect/train2/: args.yaml
runs/detect/train3/: args.yaml
runs/detect/train4/: args.yaml  results.csv
runs/detect/train5/: args.yaml
runs/detect/train6/: args.yaml
runs/detect/train7/: args.yaml  results.csv
runs/detect/train8/: args.yaml  results.csv
