[tool.poetry]
name = "passwordless-authenticator"
version = "0.1.0"
description = ""
authors = ["Giedrius Banys <giedrius.banys@i4-insight.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
ultralytics = "^8.2.2"
roboflow = "^1.1.27"
opencv-python = "^4.9.0.80"
opencv-contrib-python = "^4.9.0.80"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"
websockets = "^12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
